--- a/assets/css/components/woocommerce/woocommerce-checkout-payment.css
+++ b/assets/css/components/woocommerce/woocommerce-checkout-payment.css
@@ -20,7 +20,7 @@
 				@apply ml-1;
 
 				img {
-					@apply inline-block my-0;
+					@apply my-0 inline-block;
 				}
 			}
 
@@ -29,42 +29,9 @@
 			}
 
 			.payment_box {
-				@apply w-full block mt-2 mb-3 pl-7;
+				@apply mt-2 mb-3 block w-full pl-7;
 				* {
 					@apply text-sm text-gray-500;
-				}
-			}
-		}
-
-		/* STRIPE */
-		.payment_method_stripe {
-			.payment_method_stripe {
-				@apply p-3 border border-septenary;
-			}
-
-			.wc-saved-payment-methods {
-				@apply mt-3;
-			}
-
-			.wc-credit-card-form {
-				@apply mt-3;
-				.form-row {
-					@apply my-1 p-0 w-full !important;
-				}
-			}
-
-			.woocommerce-SavedPaymentMethods-token,
-			.woocommerce-SavedPaymentMethods-new,
-			.woocommerce-SavedPaymentMethods-saveNew {
-				@apply flex items-center;
-				label {
-					@apply mb-0;
-				}
-			}
-
-			.wc-stripe-error {
-				* {
-					@apply text-white;
 				}
 			}
 		}
