--- a/assets/css/components/woocommerce/woocommerce-product-details.css
+++ b/assets/css/components/woocommerce/woocommerce-product-details.css
@@ -14,7 +14,3 @@
 	.woocommerce-price-suffix {
 	}
 }
-
-.woocommerce-product-details__short-description {
-	@apply prose;
-}
